Adjusted navbar to be index 1 to fix overlap.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -14,7 +14,6 @@
 
 .new-tweet form {
   overflow: auto;
-  position: relative;
 }
 
 .new-tweet textarea {
@@ -23,17 +22,12 @@
   min-width: 100%;
   height: 120%;
   padding: 5px;
-  overflow: auto;
 }
 
 .new-tweet .counter {
-  display: inline-block;
   font-style: italic;
   font-size: small;
-  position: absolute;
-  right: 10px;
-  bottom: 5px;
-}
-
-.new-tweet input[type=submit] {
+  float: right;
+  padding-top: 5px;
+  padding-right: 5px;
 }
